# Cross-Cleaner

./: .gitignore  BUILD.md  Cargo.toml  LIST_LINUX.md  LIST_MACOS.md  LIST_REGISTRY.md  LIST_WINDOWS.md  PKGBUILD  README.md  TESTING.md  build.rs  config.toml  t.html
.github/: FUNDING.yml
.github/workflows/: dev_build.yml  release.yml  update_program_lists.yml
.zed/: tasks.json
cleaner/: Cargo.toml
cleaner/src/: lib.rs
cli/: Cargo.toml  build.rs
cli/benches/: cli_benchmarks.rs
cli/src/: main.rs
cli/tests/: integration_tests.rs
database/: Cargo.toml  build.rs  database_linux.json  linux_database.json  macos_database.json  program_links.json  registry_database.json  windows_database.json
database/database/: linux_database.json  windows_database.json
database/src/: cleaner_database.rs  lib.rs  minecraft_launchers_database.rs  registry_database.rs  registry_utils.rs  structures.rs  utils.rs
gui/: Cargo.toml  build.rs
gui/src/: main.rs
script-runner/: Cargo.toml
script-runner/src/: lib.rs
scripts/: example.rhai
src/: database.rs  main.rs  registry_database.rs  registry_utils.rs  structures.rs
