[package]
name = "WinBooster"
version = "1.8.3"
edition = "2021"
build = "build.rs"

[dependencies]
glob = "0.3.1"
whoami = "1.5.2"
inquire = "0.7.5"
tabled = "0.17.0"
crossterm = "0.27.0"
tokio = { version = "1", features = ["full"] }
winreg = "0.52.0"
indicatif = "0.17.7"
disk-name = "1.0.0"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
FileDescription = "Garbage remover"
OriginalFilename = "WinBooster.exe"
LegalCopyright = "Copyright © 2024"
ProductName = "WinBooster"
ProductVersion = "1.8.3"