[package]
name = "Cross_Cleaner_CLI"
version = "1.9.2"
edition = "2021"
build = "build.rs"

[dependencies]
inquire = "0.7.5"
crossterm = "0.27.0"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.7"
notify-rust = "4"
tabled = "0.17.0"
database = { path = "../database" }
cleaner = { path = "../cleaner" }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[package.metadata.winres]
FileDescription = "Garbage remover"
OriginalFilename = "Cross Cleaner.exe"
LegalCopyright = "Copyright Monolith Development © 2025"
ProductName = "Cross Cleaner"
ProductVersion = "1.9.2"

[profile.release] # optimize file size
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
debug  = false