[package]
name = "Cross_Cleaner_CLI"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
inquire = "0.7.5"
crossterm = "0.29.0"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.11"
notify-rust = "4"
tabled = "0.20.0"
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.20.0"

database = { path = "../database" }
cleaner = { path = "../cleaner" }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
winapi = { version = "0.3", features = [
  "winnt",
  "securitybaseapi",
  "processthreadsapi",
  "handleapi",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
FileDescription = "Garbage remover"
OriginalFilename = "Cross Cleaner.exe"
LegalCopyright = "Copyright Monolith Development © 2025"
ProductName = "Cross Cleaner"
ProductVersion = "1.0.0"

[profile.release] # optimize file size
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
debug = false
