[package]
name = "database"
version = "1.0.0"
edition = "2024"

[dependencies]
tabled = "0.20.0"
whoami = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
disk-name = "1.0.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[profile.release] # optimize file size
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
debug = false
