[package]
name = "Cross_Cleaner_GUI"
version = "1.9.5"
edition = "2024"

[dependencies]
egui = "0.31.1"
eframe = "0.31.1"
env_logger = "0.11.6"
tokio = { version = "1", features = ["full"] }
notify-rust = "4"
image = "0.25.5"
tempfile = "3.3"

database = { path = "../database" }
cleaner = { path = "../cleaner" }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[package.metadata.winres]
FileDescription = "Garbage remover"
OriginalFilename = "Cross Cleaner.exe"
LegalCopyright = "Copyright Monolith Development © 2025"
ProductName = "Cross Cleaner"
ProductVersion = "1.9.5"

[profile.release] # optimize file size
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
debug  = false