[package]
name = "Cross_Cleaner_GUI"
version = "1.0.0"
edition = "2024"

[dependencies]
egui = "0.31.1"
eframe = "0.31.1"
env_logger = "0.11.6"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
notify-rust = "4"
image = "0.25.5"
tempfile = "3.3"
clap = { version = "4.0", features = ["derive"] }

database = { path = "../database" }
cleaner = { path = "../cleaner" }

# Performance: Fast memory allocator
mimalloc = "0.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
FileDescription = "Garbage remover"
OriginalFilename = "Cross Cleaner.exe"
LegalCopyright = "Copyright Monolith Development © 2025"
ProductName = "Cross Cleaner"
